laborations/lab2/testsuite/bad/bad/undecl_var.cc
int main() {
        x;
	return 0 ;
}
